# mizraj

./: .gitignore  CHANGELOG.md  README.md  commitlint.config.js  index.html  lint-staged.config.js  oxfmt.config.ts  oxlint.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  release-please-config.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.cargo/: config.toml
e2e/: multi-project.spec.ts  plan-submit.spec.ts  test-server.ts  (+1 more)
src-tauri/: Cargo.toml  progress.schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_agent_sessions.sql  0002_tasks.sql  0003_task_assignments.sql  0004_diff_comments.sql
src-tauri/src/: active_project.rs  db.rs  diff.rs  diff_format.rs  files.rs  ghostty.rs  interviews.rs  lib.rs  logging.rs  main.rs  plans.rs  project.rs  session.rs  tasks.rs  worktree.rs
src-tauri/src/commands/: get_diff.rs  list_plans.rs  mod.rs  plan_protocol.rs  plan_submit.rs  set_active_project.rs  tasks.rs
src-tauri/src/db/: mod.rs  slug.rs
src-tauri/src/ghostty/: dto.rs  watch.rs
src-tauri/src/plans/: list.rs  protocol.rs
src-tauri/src/project/: registry.rs  watcher.rs
src-tauri/src/session/: cell_frame.rs  commands.rs  error.rs  handle.rs  id.rs  key.rs  label.rs  manager.rs  mod.rs  mouse.rs  path.rs  pty.rs  sink.rs  store.rs  tauri_sink.rs  term_sink.rs
src-tauri/src/tasks/: mod.rs  store.rs
src-tauri/src/worktree/: mod.rs  wt.rs
src-tauri/tests/: path_resolve.rs  pty_spawn.rs  session_manager_drop.rs
src-tauri/tests/fixtures/sample-interview/: state.json
(+411 files in other folders)
