[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "~2.6", features = [] }

[dependencies]
tauri = { version = "~2.11", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
html-escape = "0.2"
portable-pty = "0.9"
which = "6"
thiserror = "2"
ulid = "1"
nix = { version = "0.29", default-features = false, features = ["signal"] }
tokio = { version = "1", default-features = false, features = ["time"] }
agent-cockpit-vcs = { path = "../crates/agent-cockpit-vcs" }

[dev-dependencies]
tempfile = "3"
sqlx-cli = { version = "0.8", default-features = false, features = [
	"sqlite",
	"rustls",
] }

